# manga-colorizer

./: CMakeLists.txt  ReadMe.md
src/: main.cpp
